--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#242424" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <title>Git Bash RAGit</title>
+    <title>VaultAI</title>
   </head>
   <body>
     <div id="root"></div>
